--- a/index_br.html
+++ b/index_br.html
@@ -43,7 +43,7 @@
             <section class="resume-section" id="about">
                 <div class="resume-section-content">
                     <h2 class="mb-0">Alfredo Augusto Pereira Xavier</h2>
-                    <h3 class="mb-0">Cientista de dados</h3>
+                    <h3 class="mb-0">Desenvolvedor Full Stack</h3>
                     <br>
                 <hr class="m-0" />
                 
@@ -53,22 +53,37 @@
                 </div>
                   <hr class="m-0" />
                     <h2 class="mb-5">Sobre</h2>
-                    <p class="lead mb-5">Apaixonado por ciência, tecnologia e inovação, minha formação acadêmica inclui a graduação em Química pela Universidade Federal de São Carlos (UFSCar), 
-                        além de mestrado e doutorado pela Universidade de São Paulo (USP). Minha jornada na programação teve início ainda na graduação, durante o estágio de conclusão de curso em 2010, quando ingressei 
-                        na análise quimiométrica, aplicando técnicas de ciência de dados a conjuntos de informações em análises químicas. 
-                        Utilizei instrumentos de referência, como AAS, ICP-OES e fluorescência, para realizar calibrações e modelagens com o auxílio de técnicas de machine learning, como NIRS e LIBS.</p>
-                    <p class="lead mb-5"> Meus estudos de pós-graduação abrangeram duas áreas distintas. Na primeira, concentrei-me na análise e ciência de dados, utilizando linguagens de programação 
-                        como MATLAB e Python, com bibliotecas como pandas, NumPy, scikit-learn, SciPy, PyQt, PySide6, Matplotlib, Plotly e Seaborn. Na segunda parte, direcionei meu foco para 
-                        questões ambientais relacionadas à agricultura, explorando tópicos como estoque de carbono, sequestro de carbono, mercado de crédito de carbono, humificação da matéria orgânica 
-                        do solo, sistemas de pastagem e reutilização de subprodutos agrícolas. </p>
-                    <p class="lead mb-5">  Minha experiência na empresa AGROROBÓTICA foi além da análise e modelagem de dados com a utilização da tecnologia LIBS no mercado de crédito de carbono. 
-                        Incluiu a atuação como auditor interno conforme a norma ISO 17025 e liderança da equipe técnica na implementação de sistemas de gestão da qualidade. Além disso, 
-                        dediquei-me à validação de métodos analíticos com LIBS, contribuindo para a pesquisa e desenvolvimento da empresa.</p>
-                    <p class="lead mb-5">No departamento de Engenharia e Sistemas da AGROROBÓTICA, desempenhei atividades no desenvolvimento Full Stack de aplicações em Python, 
-                        com interfaces gráficas em PyQt para ambientes desktop e utilizando Flask para aplicativos web. Além disso, participei da configuração e gerenciamento da infraestrutura de dados 
-                        na nuvem, utilizando a plataforma Microsoft Founders Hub - Azure.</p>
-                    <p class="lead mb-5">Atualmente, minha carreira me levou à Blend IT - CEABS, onde atuo como desenvolvedor Full Stack, utilizando C# e ASP.NET em sistemas baseados no modelo MVC 
-                        com um banco de dados SQL Server como backend.</p>
+                    <p class="lead mb-5">
+                        Apaixonado por ciência e tecnologia, minha formação acadêmica inclui a graduação em Química pela Universidade Federal de São Carlos (UFSCar), 
+                        além de mestrado e doutorado pela Universidade de São Paulo (USP). 
+                        Minha jornada na programação teve início ainda na graduação; durante o estágio e TCC em 2010, iniciei meus estudos nas análises quimiométricas, 
+                        aplicando ciência de dados a conjuntos de resultados de análises químicas, obtidos por instrumentos de referência, 
+                        como AAS, ICP-OES e fluorescência NIRS e LIBS, para realizar calibrações e modelagens com o auxílio de machine learning.</p>
+                    <p class="lead mb-5"> 
+                        Meus estudos de pós-graduação abrangeram duas frentes correlacionadas. Na primeira, concentrei-me em qumiometria/ciência de dados, 
+                        utilizando linguagens de programação como MATLAB e Python,
+                        com bibliotecas como pandas, NumPy, scikit-learn, SciPy, PyQt, PySide6, Matplotlib, Plotly e Seaborn. Na segunda parte, 
+                        direcionei meu foco para questões ambientais relacionadas à agricultura, explorando tópicos como
+                        estoque de carbono, sequestro de carbono, mercado de crédito de carbono, humificação da matéria orgânica do solo, 
+                        sistemas de pastagem e reutilização de subprodutos agrícolas. 
+                    </p>
+                    <p class="lead mb-5"> 
+                        Minha experiência na empresa AGROROBÓTICA foi além da análise e modelagem de dados com a utilização da tecnologia LIBS
+                    no mercado de crédito de carbono. Incluiu a atuação como auditor interno conforme a norma ISO 17025 e liderança da
+                    equipe técnica na implementação de sistemas de gestão da qualidade. Além disso, dediquei-me à validação de métodos
+                    analíticos com LIBS, contribuindo para a pesquisa e desenvolvimento da empresa.
+                    </p>
+                    <p class="lead mb-5">
+                        No departamento de Engenharia e Sistemas da AGROROBÓTICA, desempenhei atividades no desenvolvimento Full Stack de
+                    aplicações em Python, com interfaces gráficas em PyQt para ambientes desktop e utilizando Flask para aplicativos web.
+                    Além disso, participei da configuração e gerenciamento da infraestrutura de dados na nuvem, utilizando a plataforma
+                    Microsoft Azure.
+                    </p>
+                    <p class="lead mb-5">
+                        Na CEABS Serviços, atuo como desenvolvedor Full Stack, utilizando C# .NET em sistemas MVC e também utilizando Vue3, com
+                    banco de dados em SQL Server. Recentemente implementei a plataforma de gestão de serviços em TI (ITSM) Atlassian - Jira
+                    Service Management para operação dos times de TI.
+                    </p>
 
                         
                     <div class="social-icons">
@@ -83,7 +98,7 @@
             <section class="resume-section" id="interests">
                 <div class="resume-section-content">
                     <h2 class="mb-5">Objetivos</h2>
-                    <p class="mb-0">Oportunidade para área de TI - Desenvolvedor.</p>
+                    <p class="mb-0">Oportunidade para área de TI - Desenvolvedor web.</p>
                 </div>
             </section>
 
@@ -94,12 +109,19 @@
 
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
-                            <h3 class="mb-0">Desenvolvedor Full-Stack | C# ASP.NET MVC | SQL Server</h3>
+                            <h3 class="mb-0">Desenvolvedor Full-Stack | C# .NET8 | Vue3 | SQL Server</h3>
                             <div class="subheading mb-3">CEABS Serviços | Segurança e Inovação</div>
                                 <ul>
-                                    <li> 2023 - atualmente - Integrante do time de desenvolvimento em C# ASP.NET MVC. Atividades tanto em frontend com desenvolvimento web 
-                                        (HTML, CSS e JS) quanto backend com C# e SQL Server. Versionamento em git com aplicações em Azure DevOps. Utilização de metodologias
-                                    ágeis como SCRUM e KANBAN.</li>
+                                    <li> <strong> 2024 - atualmente </strong>- Integrante do time de desenvolvimento Full-stack com frontend em Vue.JS e backend em C# .NET8 e SQL Server.
+                                        Versionamento em git com aplicações em Azure DevOps. Utilização de metodologias ágeis como Scrum e Kanban.
+                                    </li>
+                                    <li> <strong>2023 - atualmente </strong>- Integrante do time de manutenção dos sistemas em C# ASP.NET MVC. Atividades tanto em frontend com desenvolvimento web 
+                                        quanto backend e SQL Server. Versionamento em git com aplicações em Azure DevOps. 
+                                    </li>
+                                    <li> 
+                                        <strong> 2023 - atualmente </strong>- Desenvolvimento, implementação e manutenção dos projetos de Gerenciamento de Serviços de TI (ITSM) 
+                                        via Jira Service Management para os times de Produtos.
+                                    </li>
                                 </ul>
                             </div>
                         <div class="flex-shrink-0"><span class="text-primary">Abril 2023 - atualmente</span></div>
@@ -110,13 +132,13 @@
                             <h3 class="mb-0">Cientista de dados pleno</h3>
                             <div class="subheading mb-3">AGROROBÓTICA - Fotônica em Certificações Agroambientais</div>
                                 <ul>
-                                    <li> 2023 - 2023 - Integrante do time de desenvolvimento, estruturação e arquitetura de computação em nuvem (Microsoft Founders Hub - Azure); </li>
-                                    <li> 2022 - 2023 - Colaboração no desenvolvimento dos inventários para créditos de carbono junto à equipe de sustentabilidade de acordo com a VM0042 - VERRA;</li>
-                                    <li> 2021 - 2023 - Integrante do time de desenvolvimento de softwares internos em Python (PySide6/PyQt) em ambiente Linux Ubuntu/Mint; </li>
-                                    <li> 2021 - 2023 - Desenvolvimento da plataforma interativa do cliente utilizando ferramentas gráficas em Python como Plotly e Seaborn com exportação web (Python + Flask + HTML + CSS + JS (Bootstrap));</li>
-                                    <li> 2021 - 2023 - Validação dos métodos analíticos (ISO 17025) desenvolvidos utilizando LIBS;</li>
-                                    <li> 2021 - 2022 - Integrante do time de análise e ciência de dados (ETL) com aplicações em quimiometria, desenvolvimento de modelos multivariados de predição, classificação e determinação, exploração de dados temporais e controle estatístico de processos; </li>
-                                    <li> 2021 - 2022 - Encarregado pela interface entre os dados gerados pelos métodos tradicionais de análise química do solos e a plataforma de inteligência artificial AGLIBS; coordenação da geração e emissão de laudos comerciais. </li>
+                                    <li> <strong> 2023 - 2023 </strong>- Integrante do time de desenvolvimento, estruturação e arquitetura de computação em nuvem (Microsoft Founders Hub - Azure); </li>
+                                    <li> <strong> 2022 - 2023 </strong>- Colaboração no desenvolvimento dos inventários para créditos de carbono junto à equipe de sustentabilidade de acordo com a VM0042 - VERRA;</li>
+                                    <li> <strong> 2021 - 2023 </strong>- Integrante do time de desenvolvimento de softwares internos em Python (PySide6/PyQt) em ambiente Linux Ubuntu/Mint; </li>
+                                    <li> <strong> 2021 - 2023 </strong>- Desenvolvimento da plataforma interativa do cliente utilizando ferramentas gráficas em Python como Plotly e Seaborn com exportação web (Python + Flask + HTML + CSS + JS (Bootstrap));</li>
+                                    <li> <strong> 2021 - 2023 </strong>- Validação dos métodos analíticos (ISO 17025) desenvolvidos utilizando LIBS;</li>
+                                    <li> <strong> 2021 - 2022 </strong>- Integrante do time de análise e ciência de dados (ETL) com aplicações em quimiometria, desenvolvimento de modelos multivariados de predição, classificação e determinação, exploração de dados temporais e controle estatístico de processos; </li>
+                                    <li> <strong> 2021 - 2022 </strong>- Encarregado pela interface entre os dados gerados pelos métodos tradicionais de análise química do solos e a plataforma de inteligência artificial AGLIBS; coordenação da geração e emissão de laudos comerciais. </li>
                                 </ul>
                             </div>
                         <div class="flex-shrink-0"><span class="text-primary">Janeiro 2021 - Abril 2023</span></div>
