atualização cv br

--- a/index_br.html
+++ b/index_br.html
@@ -109,7 +109,7 @@
 
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
-                            <h3 class="mb-0">Desenvolvedor Full-Stack | C# .NET8 | Vue3 | SQL Server</h3>
+                            <h3 class="mb-0">Desenvolvedor Full-Stack</h3>
                             <div class="subheading mb-3">CEABS Serviços | Segurança e Inovação</div>
                                 <ul>
                                     <li> <strong> 2024 - atualmente </strong>- Integrante do time de desenvolvimento Full-stack com frontend em Vue.JS e backend em C# .NET8 e SQL Server.
