--- a/pdf.html
+++ b/pdf.html
@@ -29,7 +29,7 @@
                 <hr class="my-2" />
 
                 <h2 class="mb-2">Sobre</h2>
-                <p>
+                <p class="my-0">
                     Profissional com experiência em desenvolvimento full-stack, atuando com .NET 8, Vue.js, SQL, Azure
                     DevOps e AWS. Ao longo de três anos na CEABS Serviços, venho aplicando práticas modernas de
                     engenharia de software como TDD, Clean Code, S.O.L.I.D e Design Patterns, sempre aliado a
@@ -48,7 +48,7 @@
             </div>
         </section>
 
-        <hr class="my-2" />
+        <hr />
         <!-- Interests-->
         <section class="resume-section" id="interests">
             <div class="resume-section-content">
@@ -57,14 +57,14 @@
             </div>
         </section>
 
-        <hr class="my-2" />
+        <hr />
         <!-- Experience-->
         <section class="resume-section" id="experience">
             <div class="resume-section-content">
                 <h2 class="mb-2">Experiência profissional</h2>
                 <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                     <div class="flex-grow-1">
-                        <h3 class="mb-0">Desenvolvedor Full-Stack </h3>
+                        <h3 class="mb-0">Desenvolvedor Full Stack </h3>
                         <div class="flex-shrink-0"><span class="text-primary">2023 - Atualmente</span></div>
                         <div class="subheading mb-3">CEABS Serviços | Segurança e Inovação</div>
                         <ul>
