--- a/pdf.html
+++ b/pdf.html
@@ -24,26 +24,27 @@
         <!-- About-->
         <section class="resume-section" id="about">
             <div class="resume-section-content">
-                <h2 class="mb-2">Alfredo Augusto Xavier</h2>
-                <h3 class="mb-0">Desenvolvedor Full Stack</h3>
-                <hr class="my-2" />
+                <h1 class="my-3">Alfredo Augusto Xavier</h1>
+                <h2 class="mb-0">Desenvolvedor Full Stack</h2>
+                <hr />
 
                 <h2 class="mb-2">Sobre</h2>
                 <p class="my-0">
                     Profissional com experiência em desenvolvimento full-stack, atuando com .NET 8, Vue.js, SQL, Azure
-                    DevOps e AWS. Ao longo de três anos na CEABS Serviços, venho aplicando práticas modernas de
-                    engenharia de software como TDD, Clean Code, S.O.L.I.D e Design Patterns, sempre aliado a
-                    metodologias
-                    ágeis e boas práticas de versionamento. Anteriormente, na Agrorobótica, também atuei como
-                    desenvolvedor
-                    utilizando Python/Flask e participei da estruturação de soluções em nuvem pelo programa Microsoft
-                    Founders Hub (Azure). Também integrei a equipe de ciência de dados, desenvolvendo modelos preditivos
-                    e de classificação, além de trabalhar com séries temporais e controle estatístico de processos.
-                    Minha
-                    trajetória com programação começou no mestrado e doutorado pela USP São Carlos, em parceria com a
+                    DevOps e AWS para infraestrutura. Ao longo de três anos na CEABS Serviços, venho aplicando práticas
+                    modernas de engenharia de software como TDD, Clean Code, S.O.L.I.D e Design Patterns, sempre aliado
+                    a
+                    metodologias ágeis e boas práticas de versionamento. Anteriormente, na Agrorobótica, atuei tanto
+                    como
+                    cientista de dados quanto desenvolvedor utilizando Python/Flask. Participei da estruturação de
+                    soluções
+                    em nuvem pelo programa Microsoft Founders Hub (Azure). Como cientista de dados, desenvolvi modelos
+                    preditivos e de classificação, além de trabalhar com séries temporais e controle estatístico de
+                    processos.
+                    Minha trajetória com programação começou no mestrado e doutorado pela USP São Carlos, em parceria
+                    com a
                     Embrapa Instrumentação, quando acompanhei a criação e incubação da Agrorobótica e iniciei meus
-                    estudos
-                    em Matlab e Python aplicados à análise de dados químicos.
+                    estudos em Matlab e Python aplicados à análise de dados químicos.
                 </p>
             </div>
         </section>
@@ -64,7 +65,7 @@
                 <h2 class="mb-2">Experiência profissional</h2>
                 <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                     <div class="flex-grow-1">
-                        <h3 class="mb-0">Desenvolvedor Full Stack </h3>
+                        <h3 class="mb-0">Desenvolvedor Full Stack Pleno</h3>
                         <div class="flex-shrink-0"><span class="text-primary">2023 - Atualmente</span></div>
                         <div class="subheading mb-3">CEABS Serviços | Segurança e Inovação</div>
                         <ul>
@@ -73,28 +74,36 @@
                             </li>
                             <li>
                                 Desenvolvimento em Frontend com Vue.js - Vue3, VueX, Vite, Vuetify, Pinia, Router,
-                                TypeScript
+                                TypeScript.
                             </li>
                             <li>
-                                Utilização de banco de dados relacional - SQL Server
+                                Utilização de banco de dados relacional - SQL Server.
                             </li>
                             <li>
-                                Testes unitários aplicando TDD em xUnit
+                                Testes unitários aplicando TDD em xUnit.
                             </li>
                             <li>
-                                Versionamento utilizando Git CI/CD com Azure DevOps
+                                Versionamento utilizando Git CI/CD com Azure DevOps.
                             </li>
                             <li>
-                                Boas práticas de desenvolvimento como Clean Code, S.O.L.I.D. e design Patters
+                                Boas práticas de desenvolvimento como Clean Code, S.O.L.I.D. e design Patters.
                             </li>
                             <li>
-                                Aplicação de metodologias Ágeis (Scrum e Kanban)
+                                Aplicação de metodologias Ágeis (Scrum e Kanban).
                             </li>
                             <li>
-                                Utilização do pacote Atlassian - Jira, Service Management, Confluence
+                                Utilização do pacote Atlassian - Jira e Confluence.
                             </li>
                             <li>
-                                Utilização de ferramentas de design - Figma
+                                Utilização de ferramentas de design - Figma.
+                            </li>
+                            <li>
+                                Atuação inicial como suporte de sistemas legado na equipe de sustentação.
+                            </li>
+                            <li>
+                                Desenvolvimento, implementação e manutenção dos projetos de Gerenciamento de Serviços de
+                                TI (ITSM)
+                                via Jira Service Management para os times de Produtos.
                             </li>
                         </ul>
                     </div>
@@ -108,35 +117,36 @@
                         <div class="subheading mb-3">AGROROBÓTICA - Fotônica em Certificações Agroambientais</div>
                         <ul>
                             <li>
-                                Full-Stack de aplicações internas em Python/Flask em ambiente Linux
-                            </li>
-                            <li>
-                                Estruturação e arquitetura de computação em nuvem (Microsoft Founders Hub - Azure)
-                            </li>
-                            <li>
-                                Desenvolvimento da plataforma interativa do cliente utilizando ferramentas gráficas em
-                                Python como Plotly e Seaborn
-                            </li>
-                            <li>
-                                Colaboração no desenvolvimento dos inventários para créditos de carbono de acordo com a
-                                VM0042 - VERRA
-                            </li>
-                            <li>
-                                Validação dos métodos analíticos (ISO 17025) desenvolvidos utilizando espectroscopia
-                            </li>
-                            <li>
-                                Análise e ciência de dados (ETL) com aplicações em quimiometria, desenvolvimento de
-                                modelos multivariados de predição,
-                                classificação e determinação, exploração de dados temporais e controle estatístico de
-                                processos;
+                                Full-Stack de aplicações internas em Python/Flask em ambiente Linux.
                             </li>
                             <li> Interface entre os dados gerados pelos métodos tradicionais de análise química do solos
                                 e a plataforma de IA AGLIBS; coordenação da geração e emissão de laudos comerciais e
                                 crédito de carbono.
                             </li>
+                            <li>
+                                Estruturação e arquitetura de computação em nuvem (Microsoft Founders Hub - Azure).
+                            </li>
+                            <li>
+                                Análise e ciência de dados (ETL) com aplicações em quimiometria, desenvolvimento de
+                                modelos multivariados de predição, classificação e determinação, exploração de
+                                dados temporais e controle estatístico de processos.
+                            </li>
+                            <li>
+                                Desenvolvimento da plataforma interativa do cliente utilizando ferramentas gráficas em
+                                Python como Plotly e Seaborn.
+                            </li>
+                            <li>
+                                Colaboração no desenvolvimento dos inventários para créditos de carbono de acordo com a
+                                VM0042 - VERRA.
+                            </li>
+                            <li>
+                                Validação dos métodos analíticos (ISO 17025) desenvolvidos utilizando espectroscopia.
+                            </li>
                         </ul>
                     </div>
                 </div>
+
+                <div class="page-break"></div>
 
                 <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                     <div class="flex-grow-1">
@@ -258,7 +268,7 @@
             </div>
         </section>
 
-        <hr class="m-2" />
+        <hr />
         <!-- Education-->
         <section class="resume-section" id="education">
             <div class="resume-section-content">
@@ -327,6 +337,8 @@
                     </div>
                 </div>
 
+                <div class="page-break"></div>
+
                 <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                     <div class="flex-grow-1">
                         <h3 class="mb-0">Universidade Federal de São Carlos - UFSCAR</h3>
@@ -335,7 +347,7 @@
                     </div>
                 </div>
         </section>
-        <hr class="my-2" />
+        <hr />
         <!-- Skills-->
         <section class="resume-section" id="skills">
             <div class="resume-section-content">
@@ -363,7 +375,7 @@
                 </ul>
             </div>
 
-            <hr class="my-2" />
+            <hr />
 
             <div class="resume-section-content">
                 <h2 class="my-3">Competências</h2>
@@ -406,7 +418,7 @@
                     <br>
                 </ul>
 
-                <hr class="my-2" />
+                <hr />
 
                 <h2 class="m-3">Cursos e certificações</h2>
                 <ul class="fa-ul mb-0">
@@ -484,7 +496,7 @@
 
             </div>
         </section>
-        <hr class="m-2" />
+        <hr />
 
         <!-- Awards-->
         <section class="resume-section" id="awards">
