--- a/pdf.html
+++ b/pdf.html
@@ -33,17 +33,14 @@
                     Profissional com experiência em desenvolvimento full-stack, atuando com .NET 8, Vue.js, SQL, Azure
                     DevOps e AWS para infraestrutura. Ao longo de três anos na CEABS Serviços, venho aplicando práticas
                     modernas de engenharia de software como TDD, Clean Code, S.O.L.I.D e Design Patterns, sempre aliado
-                    a
-                    metodologias ágeis e boas práticas de versionamento. Anteriormente, na Agrorobótica, atuei tanto
-                    como
-                    cientista de dados quanto desenvolvedor utilizando Python/Flask. Participei da estruturação de
-                    soluções
-                    em nuvem pelo programa Microsoft Founders Hub (Azure). Como cientista de dados, desenvolvi modelos
-                    preditivos e de classificação, além de trabalhar com séries temporais e controle estatístico de
+                    a metodologias ágeis e boas práticas de versionamento. Anteriormente, na Agrorobótica, atuei tanto
+                    como cientista de dados quanto desenvolvedor utilizando Python/Flask. Participei da estruturação de
+                    soluções em nuvem pelo programa Microsoft Founders Hub (Azure). Como cientista de dados, desenvolvi
+                    modelos preditivos e de classificação, além de trabalhar com séries temporais e controle estatístico
+                    de
                     processos.
                     Minha trajetória com programação começou no mestrado e doutorado pela USP São Carlos, em parceria
-                    com a
-                    Embrapa Instrumentação, quando acompanhei a criação e incubação da Agrorobótica e iniciei meus
+                    com a Embrapa Instrumentação, quando acompanhei a criação e incubação da Agrorobótica e iniciei meus
                     estudos em Matlab e Python aplicados à análise de dados químicos.
                 </p>
             </div>
@@ -122,6 +119,10 @@
                             <li> Interface entre os dados gerados pelos métodos tradicionais de análise química do solos
                                 e a plataforma de IA AGLIBS; coordenação da geração e emissão de laudos comerciais e
                                 crédito de carbono.
+                            </li>
+                            <li>
+                                Análises exploratórias em dados espectrais utilizando MATLAB e Python (NumPy, Pandas,
+                                Scikit-learn,Matplotlib)
                             </li>
                             <li>
                                 Estruturação e arquitetura de computação em nuvem (Microsoft Founders Hub - Azure).
@@ -353,17 +354,60 @@
             <div class="resume-section-content">
                 <h2 class="my-2">Habilidades técnicas</h2>
                 <div class="subheading mb-1"> <strong> Tecnologia da informação </strong></div>
-                <ul class="fa-ul mb-1">
-                    <li> Linguagem de programação</li>
-                    <li> Banco de dados relacionais</li>
-                    <li> Ciência e análise de Dados </li>
+                <ul class="fa-ul mb-0">
+                    <li>👨‍💻 <strong>Desenvolvimento de Software:</strong>
+                        <ul>
+                            <li>Backend com C# (.NET 6/8, ASP.NET, APIs RESTful, MVC)</li>
+                            <li>Frontend com Vue.js (Vue3, Vite, Vuetify, Pinia, Router), HTML, CSS, TypeScript</li>
+                            <li>Python (Flask, PyQt, PySide6)</li>
+                            <li>Testes unitários, versionamento (Git), CI/CD com Azure DevOps</li>
+                            <li>Banco de Dados (SQL Server)</li>
+                            <li>Clean Code, S.O.L.I.D. e TDD</li>
+                            <li>Design patterns</li>
+                        </ul>
+                    </li>
+
+                    <li>📊 <strong>Gestão & Metodologias:</strong>
+                        <ul>
+                            <li>Scrum, Kanban, Confluence, Jira, Figma</li>
+                            <li>Jira Service Management para ITSM</li>
+                        </ul>
+                    </li>
+
+                    <li>☁️ <strong>Cloud & DevOps:</strong>
+                        <ul>
+                            <li>Microsoft Azure (Founders Hub, Storage, App Services)</li>
+                            <li>AWS (serviços básicos, deploy e integração)</li>
+                        </ul>
+                    </li>
+
+                    <li>🧠 <strong>Ciência de Dados & Modelagem:</strong>
+                        <ul>
+                            <li>Python (NumPy, Pandas, Scikit-learn, Matplotlib, Seaborn, Plotly)</li>
+                            <li>MATLAB</li>
+                            <li>Modelagem preditiva e estatística aplicada à Química e Agronomia</li>
+                            <li>Quimiometria, controle de qualidade, análise multivariada</li>
+                        </ul>
+                    </li>
                 </ul>
 
-                <div class="subheading mb-1"> <strong> Demais habilidades </strong></div>
+                <div class="subheading my-2"> <strong> Demais habilidades </strong></div>
                 <ul class="fa-ul mb-0">
-                    <li> Sustentabilidades e demandas ambientais </li>
-                    <li> Controle da qualidade </li>
-                    <li> Ciência e análise de Dados </li>
+                    <li>🌱 <strong>Sustentabilidade & Carbono:</strong>
+                        <ul>
+                            <li>Modelagem de carbono no solo, estoque e inventário</li>
+                            <li>Comercialização de créditos de carbono (VM0042 – VERRA)</li>
+                            <li>Aplicações em agricultura regenerativa e sustentabilidade</li>
+                        </ul>
+                    </li>
+
+                    <li>📋 <strong>Qualidade & Normas Técnicas:</strong>
+                        <ul>
+                            <li>Auditor interno ISO 17025</li>
+                            <li>Validação de métodos analíticos</li>
+                            <li>Coordenação técnica de laboratório e P&D</li>
+                        </ul>
+                    </li>
                 </ul>
 
                 <div class="subheading mb-1"> <strong>Idiomas </strong></div>
