--- a/pdf.html
+++ b/pdf.html
@@ -462,7 +462,7 @@
                     <br>
                 </ul>
 
-                <hr />
+                <div class="page-break"></div>
 
                 <h2 class="m-3">Cursos e certificações</h2>
                 <ul class="fa-ul mb-0">
