--- a/pdf.html
+++ b/pdf.html
@@ -279,7 +279,7 @@
                         <h3 class="mb-0">Universidade de São Paulo - USP</h3>
                         <div class="flex-shrink-0"><span class="text-primary">Fevereiro 2015 - Outubro 2019</span></div>
                         <div class="subheading mb-3">Doutorado em Química Analítica</div>
-                        <p>Atividades e disciplinas relevantes:</p>
+                        <!-- <p>Atividades e disciplinas relevantes:</p>
                         <ul>
                             <li> Tópicos em Química: Quimiometria I </li>
                             <li> Tópicos em Química: Quimiometria II </li>
@@ -308,7 +308,7 @@
                                     soils with different textures using laser-induced breakdown spectroscopy: spectral
                                     interference
                                     correction and method for 3D plane model.</a> </li>
-                        </ul>
+                        </ul> -->
                     </div>
                 </div>
 
@@ -317,7 +317,7 @@
                         <h3 class="mb-0">Universidade de São Paulo - USP</h3>
                         <div class="flex-shrink-0"><span class="text-primary">Fevereiro 2012 - Maio 2014</span></div>
                         <div class="subheading mb-3">Mestrado em Química Analítica</div>
-                        <p>Atividades e disciplinas relevantes:</p>
+                        <!-- <p>Atividades e disciplinas relevantes:</p>
                         <ul>
                             <li> Redação de Documentos Científicos </li>
                             <li> Química Analítica Avançada </li>
@@ -334,11 +334,11 @@
                             <li><a href="http://www.scielo.br/scielo.php?script=sci_arttext&pid=S0103-90162019000100033"
                                     target="_blank">Soil carbon stock and humification in pastures under different
                                     levels of intensification in Brazil</a></li>
-                        </ul>
+                        </ul> -->
                     </div>
                 </div>
 
-                <div class="page-break"></div>
+                <!-- <div class="page-break"></div> -->
 
                 <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                     <div class="flex-grow-1">
@@ -390,6 +390,8 @@
                         </ul>
                     </li>
                 </ul>
+
+                <div class="page-break"></div>
 
                 <div class="subheading my-2"> <strong> Demais habilidades </strong></div>
                 <ul class="fa-ul mb-0">
@@ -462,9 +464,9 @@
                     <br>
                 </ul>
 
-                <div class="page-break"></div>
+                <!-- <div class="page-break"></div> -->
 
-                <h2 class="m-3">Cursos e certificações</h2>
+                <h2 class="my-3">Cursos e certificações</h2>
                 <ul class="fa-ul mb-0">
                     <li>
                         <span class="fa-li"><i class="fas fa-check"></i></span>
@@ -507,10 +509,6 @@
                     <li>
                         <span class="fa-li"><i class="fas fa-check"></i></span>
                         [LinkedIn] Fundamentos do Scrum
-                    </li>
-                    <li>
-                        <span class="fa-li"><i class="fas fa-check"></i></span>
-                        [LinkedIn] HTML: Formação Básica — Competências: HTML
                     </li>
                     <li>
                         <span class="fa-li"><i class="fas fa-check"></i></span>
@@ -569,7 +567,7 @@
 
         <div class="contactCard">
             <img class="contactCard__avatar" src="assets/img/profile4.jpg" alt="Foto de Alfredo Xavier">
-        
+
         </div>
 
         <ul class="fa-ul contactList">
